--- a/src/app/shared/form/form-body-iot-devices/form-body-iot-devices.component.html
+++ b/src/app/shared/form/form-body-iot-devices/form-body-iot-devices.component.html
@@ -104,6 +104,44 @@
       <h3>{{'IOTDEVICE.LORAWANSETUP' | translate}}</h3>
     </div>
 
+    <div class="form-group mt-3 col-12">
+      <label class="form-label" for="serviceProfileID">{{'QUESTION.CHOOSE-SERVICEPROFILE' | translate}}</label>*
+      <select 
+        id="serviceProfileID" 
+        class="form-select" 
+        name="serviceProfileID" 
+        [(ngModel)]="iotDevice.lorawanSettings.serviceProfileID" 
+        required
+        [value]="iotDevice.lorawanSettings.serviceProfileID"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('serviceProfileID'), 'is-valid' : formFailedSubmit && !errorFields.includes('serviceProfileID')}">
+        <option 
+          *ngFor="let serviceProfile of serviceProfiles" 
+          [value]="serviceProfile.id" 
+          [selected]="serviceProfile.id === iotDevice.lorawanSettings.serviceProfileID">
+            {{serviceProfile.name}}
+        </option>
+      </select>
+    </div>
+
+    <div class="form-group mt-3 col-12">
+      <label class="form-label" for="deviceProfileID">{{'QUESTION.CHOOSE-SERVICEPROFILE' | translate}}</label>*
+      <select 
+        id="deviceProfileID" 
+        class="form-select" 
+        name="deviceProfileID" 
+        [(ngModel)]="iotDevice.lorawanSettings.deviceProfileID" 
+        required
+        [value]="iotDevice.lorawanSettings.deviceProfileID"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('deviceProfileID'), 'is-valid' : formFailedSubmit && !errorFields.includes('deviceProfileID')}">
+        <option 
+          *ngFor="let deviceProfile of deviceProfiles" 
+          [value]="deviceProfile.id" 
+          [selected]="deviceProfile.id === iotDevice.lorawanSettings.deviceProfileID">
+            {{deviceProfile.name}}
+        </option>
+      </select>
+    </div>
+
     <div class="form-group mt-5">
       <label class="form-label" for="devEUI">{{'QUESTION.DEVEUI' | translate}}</label>
       <input type="text" id="devEUI" name="devEUI" maxLength="16"
