--- a/src/app/profiles/profiles-list/profiles-list.component.html
+++ b/src/app/profiles/profiles-list/profiles-list.component.html
@@ -5,4 +5,7 @@
     <div class=" row">
         <app-service-profiles-list></app-service-profiles-list>
     </div>
+    <div class=" row">
+        <app-device-profiles-list></app-device-profiles-list>
+    </div>
 </div>
