-error handling -update of device profiles -adding yesNo pipe -Adding no-space validator -adding jumbotron

--- a/src/assets/scss/setup/_utilities.scss
+++ b/src/assets/scss/setup/_utilities.scss
@@ -22,6 +22,9 @@
   }
 }
 
+// Vertical align helper
+
+
 .vertical-align {
   display: -webkit-box;
   display: -moz-box;
@@ -44,4 +47,9 @@
     -webkit-align-items: flex-end;
     align-items: flex-end;
   }
+}
+
+//mandotory Asterisk helper
+.asterisk-if-mandatory::after {
+  content: " *";
 }
