--- a/src/app/profiles/device-profiles/device-profiles-detail/device-profiles-detail.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-detail/device-profiles-detail.component.html
@@ -1,1 +1,41 @@
-<p>device-profiles-detail works!</p>
+<div class="row">
+    <div class="bottom-separator">
+        <div class="col-xs-12">
+            <app-form-header [backButton]="backButton" [title]="deviceProfile.name"></app-form-header>
+        </div>
+    </div>
+</div>
+
+<div class="row my-3">
+    <div class="col-xs-12">
+        <div class="btn-group float-right">
+            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
+                {{'PROFILES.SERVICE_PROFILE.DROPDOWN' | translate}} <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li class="dropdown-item"><a style="cursor: pointer;"
+                        (click)="onEditDeviceProfile()">{{'PROFILES.SERVICE_PROFILE.EDIT' | translate}}</a>
+                </li>
+                <li class="dropdown-item"><a style="cursor: pointer;"
+                        (click)="onDeleteDeviceProfile()">{{'PROFILES.SERVICE_PROFILE.DELETE' | translate}}</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+<div class="jumbotron m-md-4 p-md-3">
+    <div class="row">
+        <!-- <div class="col-12">
+            <h6>GUID <span>
+                    <p>{{deviceProfile.id}}</p>
+                </span></h6>
+        </div> -->
+        <div class="col-12">
+            <h6>{{'PROFILES.SERVICE_PROFILE.NAME' | translate}} <span>
+                    <p>{{deviceProfile.name}}</p>
+                </span></h6>
+        </div>
+
+    </div>
+</div>
