--- a/src/app/profiles/profiles-list/profiles-list.component.html
+++ b/src/app/profiles/profiles-list/profiles-list.component.html
@@ -1,4 +1,4 @@
-<div class="px-5 py-4">
+<div class="px-md-5 py-md-4">
     <div class="row">
         <app-top-bar [showSelectedSort]="false" [title]="'Profiles'"></app-top-bar>
     </div>
