--- a/src/app/profiles/service-profiles/service-profiles-detail/service-profiles-detail.component.html
+++ b/src/app/profiles/service-profiles/service-profiles-detail/service-profiles-detail.component.html
@@ -4,70 +4,77 @@
             <app-form-header [backButton]="backButton" [title]="serviceProfile.name"></app-form-header>
         </div>
     </div>
-    <div class="row my-3">
-        <div class="col-xs-12">
-            <div class="btn-group float-right">
-                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    {{'PROFILES.SERVICE_PROFILE.DROPDOWN' | translate}} <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu">
-                    <li class="dropdown-item"><a style="cursor: pointer;"
-                            (click)="onEditServiceProfile()">{{'PROFILES.SERVICE_PROFILE.EDIT' | translate}}</a>
-                    </li>
-                    <li class="dropdown-item"><a style="cursor: pointer;"
-                            (click)="onDeleteServiceProfile()">{{'PROFILES.SERVICE_PROFILE.DELETE' | translate}}</a>
-                    </li>
-                </ul>
+</div>
+
+<div class="row my-3">
+    <div class="col-xs-12">
+        <div class="btn-group float-right">
+            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
+                {{'PROFILES.SERVICE_PROFILE.DROPDOWN' | translate}} <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li class="dropdown-item"><a style="cursor: pointer;"
+                        (click)="onEditServiceProfile()">{{'PROFILES.SERVICE_PROFILE.EDIT' | translate}}</a>
+                </li>
+                <li class="dropdown-item"><a style="cursor: pointer;"
+                        (click)="onDeleteServiceProfile()">{{'PROFILES.SERVICE_PROFILE.DELETE' | translate}}</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+<div class="jumbotron m-md-4 p-md-3">
+    <div class="row">
+        <!-- <div class="col-12">
+            <h6>GUID <span>
+                    <p>{{serviceProfile.id}}</p>
+                </span></h6>
+        </div> -->
+        <div class="col-12">
+            <h6>{{'PROFILES.SERVICE_PROFILE.NAME' | translate}} <span>
+                    <p>{{serviceProfile.name}}</p>
+                </span></h6>
+        </div>
+        <div class="col-12 py-4">
+            <h6>{{'PROFILES.SERVICE_PROFILE.ADDGWMETADATA' | translate}}<span>
+                    <p>{{serviceProfile.addGWMetaData | yesNo}}</p>
+                </span></h6>
+        </div>
+        <div class="col-12 py-4">
+            <h6>{{'PROFILES.SERVICE_PROFILE.NWKGEOLOC' | translate}}<span>
+                    <p>{{serviceProfile.nwkGeoLoc | yesNo}}</p>
+                </span></h6>
+        </div>
+        <div class="col-12 py-4">
+            <h6>{{'PROFILES.SERVICE_PROFILE.DEVICEFREQUENCY' | translate}} <span>
+                    <p>{{serviceProfile.devStatusReqFreq}}</p>
+                </span></h6>
+        </div>
+        <div class="col-12 py-4">
+            <h6>{{'PROFILES.SERVICE_PROFILE.REPORTBATTERYSTATUS' | translate}}<span>
+                    <p>{{serviceProfile.reportDevStatusBattery | yesNo}}</p>
+                </span></h6>
+        </div>
+        <div class="col-12 py-4">
+            <h6>{{'PROFILES.SERVICE_PROFILE.REPORTBATTERYMARGIN' | translate}}<span>
+                    <p>{{serviceProfile.reportDevStatusMargin | yesNo}}</p>
+                </span></h6>
+        </div>
+        <div class="col-12">
+            <div class="row">
+                <div class="col-6 py-4">
+                    <h6>{{'PROFILES.SERVICE_PROFILE.DRRATEMIN' | translate}} <span>
+                            <p>{{serviceProfile.drMin}}</p>
+                        </span></h6>
+                </div>
+                <div class="col-6 py-4">
+                    <h6>{{'PROFILES.SERVICE_PROFILE.DRRATEMAX' | translate}} <span>
+                            <p>{{serviceProfile.drMax}}</p>
+                        </span></h6>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-12 py-4">
-        <div class="col-12 col-sm-4">
-            <h4>{{'PROFILES.SERVICE_PROFILE.NAME' | translate}}</h4>
-        </div>
-        <div class="col-12 pt-2 col-sm-8">
-            <p>{{serviceProfile.name}}</p>
-        </div>
-    </div>
-    <div class="col-12 py-4">
-        <div class="col-12 col-sm-4">
-            <h4>{{'PROFILES.SERVICE_PROFILE.REPORTBATTERYSTATUS' | translate}}</h4>
-        </div>
-        <div class="col-12 pt-2 col-sm-8">
-            <p>{{serviceProfile.reportDevStatusBattery}}</p>
-        </div>
-    </div>
-    <div class="col-12 py-4">
-        <div class="col-12 col-sm-4">
-            <h4>{{'PROFILES.SERVICE_PROFILE.ADDGWMETADATA' | translate}}</h4>
-        </div>
-        <div class="col-12 pt-2 col-sm-8">
-            <p>{{ serviceProfile.addGWMetaData }}</p>
-        </div>
-    </div>
-    <div class="col-12 py-4">
-        <div class="col-12 col-sm-4">
-            <h4>{{'PROFILES.SERVICE_PROFILE.DRRATEMIN' | translate}}</h4>
-        </div>
-        <div class="col-12 pt-2 col-sm-8">
-            <p>{{ serviceProfile.drMin }}</p>
-        </div>
-    </div>
-    <div class="col-12 py-4">
-        <div class="col-12 col-sm-4">
-            <h4>{{'PROFILES.SERVICE_PROFILE.DRRATEMAX' | translate}}</h4>
-        </div>
-        <div class="col-12 pt-2 col-sm-8">
-            <p>{{ serviceProfile.drMax}}</p>
-        </div>
-    </div>
-    <div class="col-12 py-4">
-        <div class="col-12 col-sm-4">
-            <h4>{{'PROFILES.SERVICE_PROFILE.REPORT_END_DEVICE' | translate}}</h4>
-        </div>
-        <div class="col-12 pt-2 col-sm-8">
-            <p>{{ serviceProfile.targetPER }}</p>
-        </div>
+
     </div>
 </div>
