--- a/src/app/shared/form/form-body-iot-devices/form-body-iot-devices.component.scss
+++ b/src/app/shared/form/form-body-iot-devices/form-body-iot-devices.component.scss
@@ -25,8 +25,8 @@
     @include media-breakpoint-up(md) {
       min-height: 150px;
     }
+  }
 }
 
-.mat-radio-button ~ .mat-radio-button {
-    margin-left: 16px;
-  }
+.mat-radio-button~ .mat-radio-button {
+    margin-left: 16px; }
