--- a/src/app/profiles/service-profiles/service-profiles-list/service-profile-item/service-profile-item.component.html
+++ b/src/app/profiles/service-profiles/service-profiles-list/service-profile-item/service-profile-item.component.html
@@ -1,7 +1,7 @@
 <div class=" list-group-item mb-1 clearfix" routerLinkActive="active">
   <div class="row">
     <div class="col-9 pull-left d-flex align-items-center">
-      <a [routerLink]="[index]" class="container-fluid">
+      <a [routerLink]="['detail', serviceProfile.id]" class="container-fluid">
         {{ serviceProfile.name }}
       </a>
     </div>
