--- a/src/app/profiles/service-profiles/service-profiles-list/service-profiles-list.component.html
+++ b/src/app/profiles/service-profiles/service-profiles-list/service-profiles-list.component.html
@@ -9,7 +9,7 @@
 <hr>
 <div class="row">
     <div class="col-xs-12">
-        <app-service-profile-item *ngFor="let serviceProfileEl of serviceProfiles; let i = index"
-            [serviceProfile]="serviceProfileEl" [index]="i"></app-service-profile-item>
+        <app-service-profile-item *ngFor="let serviceProfile of serviceProfiles; let i = index"
+            [serviceProfile]="serviceProfile"></app-service-profile-item>
     </div>
 </div>
