--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -272,6 +272,7 @@ $button-primary-focus-bg: $color-primary !default;
 $button-primary-focus-border-color: $color-primary !default;
 
 $button-disabled-bg: $color-black-004 !default;
+$button-disabled-border: $color-black-004 !default;
 
 // //######### secondarycolors for buttons
 $button-secondary-color: $color-text-primary !default;
