--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,6 +11,11 @@
   <div class="collapse navbar-collapse flex-grow-0" id="navbar">
     <ul class="navbar-nav flex-column mt-5">
       <li class="nav-item py-2">
+        <a routerLink="/auth" routerLinkActive="active" class="nav-link pl-5 position-relative rounded" id="auth">
+          Authenticate
+        </a>
+      </li>
+      <li class="nav-item py-2">
         <a routerLink="/my-applications" routerLinkActive="active" class="nav-link pl-5 position-relative rounded"
           id="myApplications">
 
