--- a/src/app/profiles/device-profiles/device-profiles-detail/device-profiles-detail.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-detail/device-profiles-detail.component.html
@@ -26,12 +26,12 @@
 </div>
 <div class="jumbotron m-md-4 p-md-3">
     <div class="row">
-        <!-- <div class="col-12">
+        <!-- <div class="col-xs-12">
             <h6>GUID <span>
                     <p>{{deviceProfile.id}}</p>
                 </span></h6>
         </div> -->
-        <div class="col-12">
+        <div class="col-xs-12">
             <h6>{{'PROFILES.SERVICE_PROFILE.NAME' | translate}} <span>
                     <p>{{deviceProfile.name}}</p>
                 </span></h6>
