--- a/src/app/profiles/service-profiles/service-profiles-detail/service-profiles-detail.component.html
+++ b/src/app/profiles/service-profiles/service-profiles-detail/service-profiles-detail.component.html
@@ -26,42 +26,42 @@
 </div>
 <div class="jumbotron m-md-4 p-md-3">
     <div class="row">
-        <!-- <div class="col-12">
+        <!-- <div class="col-xs-12">
             <h6>GUID <span>
                     <p>{{serviceProfile.id}}</p>
                 </span></h6>
         </div> -->
-        <div class="col-12">
+        <div class="col-xs-12">
             <h6>{{'PROFILES.SERVICE_PROFILE.NAME' | translate}} <span>
                     <p>{{serviceProfile.name}}</p>
                 </span></h6>
         </div>
-        <div class="col-12 py-4">
+        <div class="col-xs-12 py-4">
             <h6>{{'PROFILES.SERVICE_PROFILE.ADDGWMETADATA' | translate}}<span>
                     <p>{{serviceProfile.addGWMetaData | yesNo}}</p>
                 </span></h6>
         </div>
-        <div class="col-12 py-4">
+        <div class="col-xs-12 py-4">
             <h6>{{'PROFILES.SERVICE_PROFILE.NWKGEOLOC' | translate}}<span>
                     <p>{{serviceProfile.nwkGeoLoc | yesNo}}</p>
                 </span></h6>
         </div>
-        <div class="col-12 py-4">
+        <div class="col-xs-12 py-4">
             <h6>{{'PROFILES.SERVICE_PROFILE.DEVICEFREQUENCY' | translate}} <span>
                     <p>{{serviceProfile.devStatusReqFreq}}</p>
                 </span></h6>
         </div>
-        <div class="col-12 py-4">
+        <div class="col-xs-12 py-4">
             <h6>{{'PROFILES.SERVICE_PROFILE.REPORTBATTERYSTATUS' | translate}}<span>
                     <p>{{serviceProfile.reportDevStatusBattery | yesNo}}</p>
                 </span></h6>
         </div>
-        <div class="col-12 py-4">
+        <div class="col-xs-12 py-4">
             <h6>{{'PROFILES.SERVICE_PROFILE.REPORTBATTERYMARGIN' | translate}}<span>
                     <p>{{serviceProfile.reportDevStatusMargin | yesNo}}</p>
                 </span></h6>
         </div>
-        <div class="col-12">
+        <div class="col-xs-12">
             <div class="row">
                 <div class="col-6 py-4">
                     <h6>{{'PROFILES.SERVICE_PROFILE.DRRATEMIN' | translate}} <span>
