--- a/src/assets/scss/components/_forms.scss
+++ b/src/assets/scss/components/_forms.scss
@@ -1,180 +1,184 @@
+@import '../setup/variables';
+
 .os2-form {
-    width: 100%;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    background-color: $white;
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.12),
-        0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.24);
-    -webkit-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.12),
-        0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.24);
-    -moz-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.12),
-        0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.24);
+  width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  background-color: $white;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.12),
+    0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.24);
+  -webkit-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.12),
+    0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.24);
+  -moz-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.12),
+    0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.24);
 
-    @include media-breakpoint-up(md) {
-        width: 510px;
-        margin-left: calc((100% - 510px) / 2);
-        margin-right: calc((100% - 510px) / 2);
-    }
+  @include media-breakpoint-up(md) {
+    width: 510px;
+    margin-left: calc((100% - 510px) / 2);
+    margin-right: calc((100% - 510px) / 2);
+  }
 
-    @include media-breakpoint-up(lg) {
-        width: 720px;
-        margin-left: calc((100% - 720px) / 2);
-        margin-right: calc((100% - 720px) / 2);
-    }
+  @include media-breakpoint-up(lg) {
+    width: 720px;
+    margin-left: calc((100% - 720px) / 2);
+    margin-right: calc((100% - 720px) / 2);
+  }
 
-    @include media-breakpoint-up(xl) {
-        width: 900px;
-        margin-left: calc((100% - 900px) / 2);
-        margin-right: calc((100% - 900px) / 2);
-    }
+  @include media-breakpoint-up(xl) {
+    width: 900px;
+    margin-left: calc((100% - 900px) / 2);
+    margin-right: calc((100% - 900px) / 2);
+  }
 
-    @include media-breakpoint-up(xxl) {
-        width: 1000px;
-        margin-left: calc((100% - 1000px) / 2);
-        margin-right: calc((100% - 1000px) / 2);
-    }
+  @include media-breakpoint-up(xxl) {
+    width: 1000px;
+    margin-left: calc((100% - 1000px) / 2);
+    margin-right: calc((100% - 1000px) / 2);
+  }
 }
 
 .form-label {
-    font-family: roboto-bold;
-    line-height: 19px;
+  font-family: roboto-bold;
+  line-height: 19px;
 }
 
 .form-control {
-    border: $grey-border solid 1px;
-    color: $black;
+  border: $outer-border;
+  color: $black;
 
-    &:focus {
-        color: $black;
-        border-color: $grey-outline;
-        box-shadow: 0 0 0 0.2rem $grey-outline;
-    }
+  &:focus {
+    color: $black;
+    border-color: $grey-outline;
+    box-shadow: 0 0 0 0.2rem $grey-outline;
+  }
 }
 
 textarea {
-    resize: none;
+  resize: none;
 }
 
 .select-box {
-    border: 1px solid #747474;
-    border-radius: 4px;
-    color: #1a1a1a;
-    display: block;
-    font-size: 16px;
-    line-height: 21px;
-    height: calc(21px + (8px * 2));
-    margin-right: 8px;
-    margin-left: 8px;
-    text-align: left;
-    padding: calc(8px - 1px) calc(16px - 1px);
-    padding-right: 32px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='iso-8859-1'%3F%3E%3C!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) --%3E%3Csvg version='1.1' id='Capa_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 256 256' style='enable-background:new 0 0 256 256;' xml:space='preserve'%3E%3Cg%3E%3Cg%3E%3Cpolygon points='225.813,48.907 128,146.72 30.187,48.907 0,79.093 128,207.093 256,79.093 '/%3E%3C/g%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A");
-    background-repeat: no-repeat;
-    background-position: calc(100% - 10px);
-    background-size: 12px;
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.12),
-        0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.24);
-    -webkit-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.12),
-        0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.24);
-    -moz-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.12),
-        0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.24);
+  border: 1px solid #747474;
+  border-radius: 4px;
+  color: #1a1a1a;
+  display: block;
+  font-size: 16px;
+  line-height: 21px;
+  height: calc(21px + (8px * 2));
+  margin-right: 8px;
+  margin-left: 8px;
+  text-align: left;
+  padding: calc(8px - 1px) calc(16px - 1px);
+  padding-right: 32px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='iso-8859-1'%3F%3E%3C!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) --%3E%3Csvg version='1.1' id='Capa_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 256 256' style='enable-background:new 0 0 256 256;' xml:space='preserve'%3E%3Cg%3E%3Cg%3E%3Cpolygon points='225.813,48.907 128,146.72 30.187,48.907 0,79.093 128,207.093 256,79.093 '/%3E%3C/g%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+  background-position: calc(100% - 10px);
+  background-size: 12px;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.12),
+    0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.24);
+  -webkit-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.12),
+    0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.24);
+  -moz-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.12),
+    0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.24);
 }
 
 .select-box-sm {
-    max-width: 16rem;
+  max-width: 16rem;
 }
 
 .select-box-md {
-    max-width: 32rem;
+  max-width: 32rem;
 }
 
 .mat-horizontal-stepper-header-container {
-    .mat-step-header {
-        .mat-step-icon {
-            background-color: $grey-border;
+  .mat-step-header {
+    .mat-step-icon {
+      background-color: $grey-border;
 
-            &.mat-step-icon-selected {
-                background-color: $orange;
-            }
-        }
-
-        .mat-step-label {
-            color: $grey-border;
-
-            &.mat-step-label-selected {
-                color: $black;
-            }
-        }
+      &.mat-step-icon-selected {
+        background-color: $orange;
+      }
     }
-    .mat-stepper-horizontal-line {
-        border-top-color: $grey-border;
+
+    .mat-step-label {
+      color: $grey-border;
+
+      &.mat-step-label-selected {
+        color: $black;
+      }
     }
+  }
+
+  .mat-stepper-horizontal-line {
+    border-top-color: $grey-border;
+  }
 }
 
 ::placeholder {
-    /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: $grey-text !important;
-    opacity: 1; /* Firefox */
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: $grey-text !important;
+  opacity: 1;
+  /* Firefox */
 }
 
 :-ms-input-placeholder {
-    /* Internet Explorer 10-11 */
-    color: $grey-text !important;
+  /* Internet Explorer 10-11 */
+  color: $grey-text !important;
 }
 
 ::-ms-input-placeholder {
-    /* Microsoft Edge */
-    color: $grey-text !important;
+  /* Microsoft Edge */
+  color: $grey-text !important;
 }
 
 .form-check-input:checked {
-    background-color: $orange;
-    border-color: $orange;
+  background-color: $orange;
+  border-color: $orange;
 
-    &:focus {
-        box-shadow: 0 0 0 0.2rem $orange-outline;
-    }
+  &:focus {
+    box-shadow: 0 0 0 0.2rem $orange-outline;
+  }
 }
 
 .form-check-inline {
-    margin: 0 1rem;
+  margin: 0 1rem;
 }
 
 .radio-image {
+  width: 150px;
+  text-align: center;
+
+  .image-container {
     width: 150px;
-    text-align: center;
+    height: 150px;
+    border-radius: 0.25rem;
+    border: solid 1px $grey-border;
+    line-height: 150px;
 
-    .image-container {
-        width: 150px;
-        height: 150px;
-        border-radius: 0.25rem;
-        border: solid 1px $grey-border;
-        line-height: 150px;
-
-        img {
-            max-width: 120px;
-        }
+    img {
+      max-width: 120px;
     }
+  }
 
-    input {
-        margin: 1rem auto 0rem;
-    }
+  input {
+    margin: 1rem auto 0rem;
+  }
 
-    .form-check-input:checked + .image-container {
-        border: solid 1px $orange;
-        box-shadow: 0 0 0 0.2rem $orange;
-    }
+  .form-check-input:checked+.image-container {
+    border: solid 1px $orange;
+    box-shadow: 0 0 0 0.2rem $orange;
+  }
 }
 
 .error-messages {
-    border-radius: .25rem;
-    border: solid 1px $red;
-    background-color: $red-light;
+  border-radius: .25rem;
+  border: solid 1px $red;
+  background-color: $red-light;
 }
 
 .form-group.is-invalid {
-    border-color: #dc3545;
+  border-color: #dc3545;
 }
