--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -10,7 +10,7 @@
             *ngIf="!isLoading">
             <div class="form-group">
                 <label for="email">Email</label>
-                <input type="email" id="email" class="form-control" ngModel name="email" required email>
+                <input type="username" id="username" class="form-control" ngModel name="username" required email>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
