--- a/src/app/profiles/device-profiles/device-profiles-list/device-profiles-list.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-list/device-profiles-list.component.html
@@ -9,7 +9,7 @@
 <hr>
 <div class="row">
     <div class="col-xs-12">
-        <app-device-profiles-item *ngFor="let deviceProfileEl of deviceProfiles; let i = index"
-            [deviceProfile]="deviceProfileEl" [index]="i"></app-device-profiles-item>
+        <app-device-profiles-item *ngFor="let deviceProfile of deviceProfiles; let i = index"
+            [deviceProfile]="deviceProfile"></app-device-profiles-item>
     </div>
 </div>
